set limit on textarea to avoid character overflowing
minor fixes on css

minor adjustments on bookCard design

--- a/style.css
+++ b/style.css
@@ -148,11 +148,8 @@ form > button {
   transform: scale(1.05);
 }
 
-main {
-  background-color: var(--black);
-}
-
 #main-container {
+  background-color: var(--black);
   display: grid;
   height: 100%;
   width: 100%;
@@ -164,12 +161,8 @@ main {
 
 .book-card {
   width: 80%;
-  height: 80%;
+  height: fit-content;
   background-color: var(--white);
   border-radius: 20px;
-  padding: 5%;
-}
-
-.book-card > div {
-  font-weight: 900;
+  padding: 25px;
 }
